# simple_json_parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_script.sh  main.cpp  nested_numeric.json  simple_numeric.json  simple_string.json  test.cpp
include/: json.h  json_fwd.h  json_macro.h  json_traits.h  json_value.h  json_value_type.h  parser.h
src/: helper.cpp  helper.h  json.cpp  json.h  json_fwd.h  json_obj.cpp  json_obj.h  json_traits.h  json_traits.hpp  json_types.h  json_value.cpp  json_value.h  macros.h  parser.cpp  parser.h
src/Archive/: json_obj.cpp  json_obj.h  json_value.h
test/: nested_numeric.json  nested_numeric2.json
